remove server js and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+#configs
+config.js
+
 # dependencies
 /node_modules
 /.pnp
@@ -18,7 +22,7 @@
 .env.test.local
 .env.production.local
 
-.package-lock.json
+package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
